changes in htm files
changes in copy

--- a/faqs.html
+++ b/faqs.html
@@ -6,5 +6,35 @@
 </head>
 
 <body>
+<h1>Faqs page</h1>
+
+<ul>
+  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+  <li>Donec eu nibh eu odio iaculis fringilla.</li>
+</ul>
+<ul>
+  <li>Integer et velit at mauris imperdiet finibus vel fringilla justo.</li>
+  <li>Aenean eu odio volutpat, dapibus arcu in, tincidunt augue.</li>
+  <li>In vel risus eget sem feugiat sagittis.</li>
+  <li>Nulla nec enim vitae leo ornare ultricies non vitae nisl.</li>
+  <li>Donec quis ligula semper, finibus nisl nec, porta velit.</li>
+</ul>
+<ul>
+  <li>Quisque ut eros aliquet, tristique justo eu, condimentum augue.</li>
+  <li>Ut pretium elit ac arcu tempus venenatis.</li>
+  <li>Fusce vulputate sapien eget odio sollicitudin vulputate.</li>
+  <li>Nullam at enim non sem auctor eleifend.</li>
+</ul>
+<ul>
+  <li>Duis condimentum dui nec gravida scelerisque.</li>
+  <li>Praesent id elit id nulla tincidunt aliquam at vestibulum quam.</li>
+  <li>Vivamus eu nisi congue, euismod nunc quis, rutrum lectus.</li>
+  <li>Aenean sit amet purus at dui porta rhoncus vitae in enim.</li>
+  <li>Vestibulum varius odio quis gravida facilisis.</li>
+</ul>
+<ul>
+  <li>Fusce ultrices leo ullamcorper felis semper, et dictum odio pretium.</li>
+  <li>Nam bibendum justo auctor justo congue porta.</li>
+</ul>
 </body>
 </html>
