--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 </head>
 
 <body>
+
+<h1>Faqs page</h1>
+
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus scelerisque dictum. Vestibulum tristique rutrum quam. Vivamus feugiat, arcu sit amet placerat lacinia, lectus augue luctus mi, at molestie sem tellus id eros. Cras at urna sit amet nibh vestibulum aliquet. Nunc pharetra convallis ipsum, sit amet pulvinar metus cursus ac. In hac habitasse platea dictumst. Praesent pharetra tortor in elit porta, eget volutpat purus cursus. Aenean nunc ante, volutpat sit amet viverra id, pulvinar et magna. Aliquam eleifend porttitor pharetra. In hac habitasse platea dictumst.</p>
+<p>Integer aliquam risus sit amet fermentum efficitur. Sed tortor velit, tempor quis ipsum quis, eleifend condimentum quam. Praesent efficitur dignissim eros gravida ultrices. Donec ultricies eros sapien, eget iaculis ligula maximus at. Vestibulum vitae arcu pulvinar, ultrices libero quis, scelerisque elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer ut leo vel urna hendrerit vehicula vel non lorem. Vivamus pretium nisi id viverra lobortis. Morbi vel nisi urna. Praesent lectus lacus, scelerisque ac magna ac, tempor mattis arcu. Etiam tempus lectus quam, et lacinia leo tincidunt nec. Ut varius luctus ante, vitae euismod enim tempus a. Sed efficitur nibh sed rhoncus tincidunt. Mauris vehicula enim a nisi pulvinar finibus.</p>
+<p>Aenean vel posuere lectus, vel aliquam elit. Nam et arcu sagittis, tincidunt nisl ut, suscipit nulla. Pellentesque egestas sagittis erat a bibendum. Curabitur eu felis volutpat, cursus purus et, consectetur lectus. Ut feugiat euismod tincidunt. Suspendisse accumsan condimentum fringilla. Morbi tincidunt auctor sapien, laoreet gravida ipsum. Ut felis odio, consequat ac consectetur quis, sodales eu leo. Integer venenatis, dui quis porta finibus, nisi leo venenatis lorem, vel dapibus arcu nibh fermentum sem. Donec dolor lorem, hendrerit sed rutrum sed, tempus sed est. Sed interdum rutrum lectus, et molestie magna rutrum vel. Nunc ut ultricies velit. In sit amet purus facilisis metus cursus tempor.</p>
+<p>Suspendisse in orci urna. Ut posuere non nulla ut aliquet. Nullam vel posuere augue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam ac elit mattis, facilisis justo a, fermentum ante. Sed varius sagittis augue, in rhoncus lectus vulputate at. In augue nisi, varius vel ex tristique, eleifend eleifend nibh. Ut maximus massa sit amet porta venenatis.</p>
+<p>Mauris eu semper dui, eget elementum massa. Curabitur dapibus elementum odio, eget porta lacus tempor eu. Suspendisse sed elit malesuada, rutrum odio bibendum, efficitur tellus. Donec cursus ut massa a suscipit. Phasellus sed ipsum imperdiet, accumsan metus iaculis, elementum elit. Proin scelerisque fermentum cursus. Proin fermentum turpis eget leo gravid</p>
 </body>
 </html>
